force-app/main/default/objects/Receipt__c/fields/Adjustment_Customer__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Receipts (Adjustment Customer)</relationshipLabel>
    <relationshipName>Receipts1</relationshipName>
    <type>Lookup</type>
</CustomField>