force-app/main/default/objects/Receipt__c/fields/Advance_Payment_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment_Rebate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance Payment Rebate</label>
    <referenceTo>Advance_Payment_Rebate__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>