force-app/main/default/objects/Receipt__c/fields/Amount_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Adjusted__c</fullName>
    <label>Amount Adjusted</label>
    <summarizedField>Receipt_Details__c.Total_Amount_adjusted__c</summarizedField>
    <summaryForeignKey>Receipt_Details__c.Receipts__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>