force-app/main/default/objects/Receipt__c/fields/Amount_Advanced__c.field-meta.xml
<CustomField>
    <fullName>Amount_Advanced__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Advance Receipt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>