force-app/main/default/objects/Receipt__c/fields/Amount_Rs__c.field-meta.xml
<CustomField>
    <fullName>Amount_Rs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>