force-app/main/default/objects/Receipt__c/fields/Audit_Approver_s_Comments__c.field-meta.xml
<CustomField>
    <fullName>Audit_Approver_s_Comments__c</fullName>
    <description>Audit Approver Comments.</description>
    <label>Audit Approver’s Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>