force-app/main/default/objects/Receipt__c/fields/Audit_History__c.field-meta.xml
<CustomField>
    <fullName>Audit_History__c</fullName>
    <label>Audit History</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>