force-app/main/default/objects/Receipt__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Adoni</fullName>
            </value>
            <value>
                <fullName>Agartala</fullName>
            </value>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Ahmednagar</fullName>
            </value>
            <value>
                <fullName>Aizawl</fullName>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Akbarpur</fullName>
            </value>
            <value>
                <fullName>Akola</fullName>
            </value>
            <value>
                <fullName>Aligarh</fullName>
            </value>
            <value>
                <fullName>Alipurduar</fullName>
            </value>
            <value>
                <fullName>Allahabad</fullName>
            </value>
            <value>
                <fullName>Alwar</fullName>
            </value>
            <value>
                <fullName>Ambala</fullName>
            </value>
            <value>
                <fullName>Ambikapur</fullName>
            </value>
            <value>
                <fullName>Amravati</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Amroha</fullName>
            </value>
            <value>
                <fullName>Anand</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>Anantnag</fullName>
            </value>
            <value>
                <fullName>Angul</fullName>
            </value>
            <value>
                <fullName>Arrah</fullName>
            </value>
            <value>
                <fullName>Asansol</fullName>
            </value>
            <value>
                <fullName>Aurangabad</fullName>
            </value>
            <value>
                <fullName>Azamgarh</fullName>
            </value>
            <value>
                <fullName>Badgam</fullName>
            </value>
            <value>
                <fullName>Bagaha</fullName>
            </value>
            <value>
                <fullName>Bahadurgarh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>