force-app/main/default/objects/Receipt__c/fields/Challan_No__c.field-meta.xml
<CustomField>
    <fullName>Challan_No__c</fullName>
    <label>Challan No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>