force-app/main/default/objects/Receipt__c/fields/Cheque_DD_Amount_Rs__c.field-meta.xml
<CustomField>
    <fullName>Cheque_DD_Amount_Rs__c</fullName>
    <label>Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>