force-app/main/default/objects/Receipt__c/fields/Credit_Account__c.field-meta.xml
<CustomField>
    <fullName>Credit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Account</label>
    <referenceTo>Account_Master__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>