force-app/main/default/objects/Receipt__c/fields/Credit_Card_Charges__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>