force-app/main/default/objects/Receipt__c/fields/Different_Project__c.field-meta.xml
<CustomField>
    <fullName>Different_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Different Project</label>
    <type>Checkbox</type>
</CustomField>