force-app/main/default/objects/Receipt__c/fields/Direct__c.field-meta.xml
<CustomField>
    <fullName>Direct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct</label>
    <type>Checkbox</type>
</CustomField>