force-app/main/default/objects/Receipt__c/fields/Is_Reversed_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Is_Reversed_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reversed Receipt</label>
    <type>Checkbox</type>
</CustomField>