force-app/main/default/objects/Receipt__c/fields/IsSOASend__c.field-meta.xml
<CustomField>
    <fullName>IsSOASend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSOASend</label>
    <type>Checkbox</type>
</CustomField>