force-app/main/default/objects/Receipt__c/fields/Job_Run__c.field-meta.xml
<CustomField>
    <fullName>Job_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Run</label>
    <type>Checkbox</type>
</CustomField>