force-app/main/default/objects/Receipt__c/fields/MyID__c.field-meta.xml
<CustomField>
    <fullName>MyID__c</fullName>
    <label>MyID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>