force-app/main/default/objects/Receipt__c/fields/NEFT__c.field-meta.xml
<CustomField>
    <fullName>NEFT__c</fullName>
    <label>NEFT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>