force-app/main/default/objects/Receipt__c/fields/On_Account_Money__c.field-meta.xml
<CustomField>
    <fullName>On_Account_Money__c</fullName>
    <defaultValue>0</defaultValue>
    <label>On Account Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>