force-app/main/default/objects/Receipt__c/fields/On_Account_Money_Autocalculated__c.field-meta.xml
<CustomField>
    <fullName>On_Account_Money_Autocalculated__c</fullName>
    <formula>Amount_Rs__c - (Total_Money_Apportioned__c +   Amount_Advanced__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Account Money</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>