force-app/main/default/objects/Receipt__c/fields/Paid_Percentage_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Paid_Percentage_Consideration__c</fullName>
    <formula>IF(
	AND(
		ISPICKVAL(Mode__c ,&quot;Credit Note&quot;),
		Debit_Account__c &lt;&gt; null,
		CONTAINS(
			$Label.credit_Note_for_Paid_Percentage,
			Debit_Account__r.Name
		)
	),
	TRUE,
	FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Percentage Consideration</label>
    <type>Checkbox</type>
</CustomField>