force-app/main/default/objects/Receipt__c/fields/PAN_no_of_TDS_Deductor__c.field-meta.xml
<CustomField>
    <fullName>PAN_no_of_TDS_Deductor__c</fullName>
    <label>PAN no of TDS Deductor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>