force-app/main/default/objects/Receipt__c/fields/Pay_Order__c.field-meta.xml
<CustomField>
    <fullName>Pay_Order__c</fullName>
    <label>Pay Order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>