force-app/main/default/objects/Receipt__c/fields/Physically_Cheque_Received__c.field-meta.xml
<CustomField>
    <fullName>Physically_Cheque_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physically Cheque Received</label>
    <type>Checkbox</type>
</CustomField>