force-app/main/default/objects/Receipt__c/fields/PR_from_receipt__c.field-meta.xml
<CustomField>
    <fullName>PR_from_receipt__c</fullName>
    <formula>Payment_Request__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR from receipt</label>
    <type>Text</type>
</CustomField>