force-app/main/default/objects/Receipt__c/fields/Print_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Print_Receipt__c</fullName>
    <formula>HYPERLINK(&quot;/apex/PrintReceiptSobhaDubai?id=&quot;+Id+&quot;&amp;letterhead=&quot;+&apos;0&apos;,&quot;Click Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Receipt</label>
    <type>Text</type>
</CustomField>