force-app/main/default/objects/Receipt__c/fields/Reason_for_rejection_new__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_rejection_new__c</fullName>
    <label>Physical Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected-Over writing</fullName>
            </value>
            <value>
                <fullName>Rejected-Third Party</fullName>
            </value>
            <value>
                <fullName>Rejected-Date lapsed</fullName>
            </value>
            <value>
                <fullName>Rejected-Wrong Favoring</fullName>
            </value>
            <value>
                <fullName>Rejected-Amount mismatch</fullName>
            </value>
            <value>
                <fullName>Rejected-Signature missing</fullName>
            </value>
            <value>
                <fullName>Rejected-Old Cheque Format CTS2010</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>