force-app/main/default/objects/Receipt__c/fields/Record_Age__c.field-meta.xml
<CustomField>
    <fullName>Record_Age__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>