force-app/main/default/objects/Receipt__c/fields/RemarksText__c.field-meta.xml
<CustomField>
    <fullName>RemarksText__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>