force-app/main/default/objects/Receipt__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request No</label>
    <referenceTo>Requester__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>