force-app/main/default/objects/Receipt__c/fields/Sharing_ProjectName__c.field-meta.xml
<CustomField>
    <fullName>Sharing_ProjectName__c</fullName>
    <label>Sharing Project Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>