force-app/main/default/objects/Receipt__c/fields/Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date__c</fullName>
    <description>used for reporting, to pull receipts whose status has change today</description>
    <label>Status Change Date</label>
    <type>Date</type>
</CustomField>