force-app/main/default/objects/Receipt__c/fields/Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project__c</fullName>
    <formula>Project_Unit__r.Sub_project_tower__c</formula>
    <label>Sub Project</label>
    <type>Text</type>
</CustomField>