force-app/main/default/objects/Receipt__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credit Note VAT Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>