force-app/main/default/objects/Receipt__c/fields/Tax_Debit_Account__c.field-meta.xml
<CustomField>
    <fullName>Tax_Debit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAT Debit Account</label>
    <referenceTo>Account_Master__c</referenceTo>
    <relationshipLabel>Receipts (VAT Debit Account)</relationshipLabel>
    <relationshipName>Receipts2</relationshipName>
    <type>Lookup</type>
</CustomField>