force-app/main/default/objects/Receipt__c/fields/TDS_Amount_In_Rs__c.field-meta.xml
<CustomField>
    <fullName>TDS_Amount_In_Rs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TDS Amount (In Rs.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>