force-app/main/default/objects/Receipt__c/fields/Token_Amount_ST__c.field-meta.xml
<CustomField>
    <fullName>Token_Amount_ST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Token Amount ST</label>
    <type>Checkbox</type>
</CustomField>