force-app/main/default/objects/Receipt__c/fields/Total_Money_Apportioned__c.field-meta.xml
<CustomField>
    <fullName>Total_Money_Apportioned__c</fullName>
    <label>Total Money Apportioned</label>
    <summarizedField>Receipt_Details__c.TotalMoneyApportioned__c</summarizedField>
    <summaryForeignKey>Receipt_Details__c.Receipts__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>