force-app/main/default/objects/Receipt__c/fields/VP_Name__c.field-meta.xml
<CustomField>
    <fullName>VP_Name__c</fullName>
    <formula>Booking__r.Sales_Head__r.Manager_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VP Name</label>
    <type>Text</type>
</CustomField>