force-app/main/default/objects/Receipt__c/fields/Xpedeon_ref__c.field-meta.xml
<CustomField>
    <fullName>Xpedeon_ref__c</fullName>
    <description>Xpedeon ref #</description>
    <label>Xpedeon ref #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>