force-app/main/default/objects/Receipt__c/validationRules/Reason_For_Cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_For_Cancellation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISPICKVAL(Receipt_Status__c, &apos;Cancelled&apos;) , ISBLANK(TEXT(Cancellation_Reason__c )),
 ISPICKVAL(Mode__c  , &apos;Cheque&apos;) 
  ), true, false)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Please Enter Reason For Cancellation as receipt status is Cancelled</errorMessage>
</ValidationRule>