force-app/main/default/objects/Receipt__c/validationRules/Validation_For_Total_Money_Apportioned.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_For_Total_Money_Apportioned</fullName>
    <active>false</active>
    <errorConditionFormula>Total_Money_Apportioned__c &gt; On_Account_Money__c</errorConditionFormula>
    <errorMessage>Total Apportioned Money should be less than or equal to On Account Money</errorMessage>
</ValidationRule>